--- a/skills/examples/rotate nav/style.css
+++ b/skills/examples/rotate nav/style.css
@@ -51,6 +51,7 @@ img{
   width: 100%;
 }
 
+/* circle button */
 .button-container{
   position: fixed;
   top: 0;
@@ -92,9 +93,42 @@ img{
  .template.showNav  .circle{
 transform: rotate(-90deg);
 }
+/* end of circle button */
 
+/* the nav style */
 nav{
   color: #fff;
   position: fixed;
   bottom: 0;
 }
+nav ul{
+  list-style: none;
+}
+
+nav ul li {
+  font-size: 1.6rem;
+  margin-bottom: 1.25rem;
+  transform: translateX(-22rem);
+  transition: all 0.5s linear;
+  cursor: pointer;
+}
+
+nav ul li:hover{
+  color: rgb(233, 103, 103);
+}
+
+.template.showNav  + nav ul li{
+  transform: translateX(0);
+  transition-delay: 0.5s;
+}
+
+nav ul li:nth-of-type(1){margin-left: 2rem;}
+nav ul li:nth-of-type(2){margin-left: 6rem;}
+nav ul li:nth-of-type(3){margin-left: 10rem;}
+
+nav ul li i{
+  font-size: 2rem;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
+}
+
