--- a/skills/examples/random picker/style.css
+++ b/skills/examples/random picker/style.css
@@ -49,7 +49,7 @@ background: rgb(213, 180, 250);
   max-width: 1170px;
   min-height: 300px;
 }
-.all .tags span{
+.all .tags .tagg{
   display: inline-block;
   background: coral;
   padding: 0.5rem 1.6rem;
@@ -64,3 +64,13 @@ background: rgb(213, 180, 250);
   background: #333;
   color: #fff;
 }
+
+@media screen and (max-width: 900px){
+  #txt{
+    max-width: 700px;
+    margin-right:auto ;
+    margin-left: auto;
+    display: inline-block;
+  }
+}
+
