--- a/style/galleryCss.css
+++ b/style/galleryCss.css
@@ -52,7 +52,7 @@ img:not(.logo-Nav){
 }
 .links-container{
    width: 100%;
-   height: 0;
+   /* height: 0; */
    overflow: hidden;
 }
 .links-Nav{
