--- a/style/style.css
+++ b/style/style.css
@@ -165,6 +165,12 @@ text-decoration: none;
     color: var(--secColot);
     font-size: 1.5rem;
 }
+.count{
+    position: absolute;
+    top: 5px;
+    right: 50px;
+    font-size: 1.4rem;
+}
 
 .master-link:hover{
 background-color: var(--secColot);
@@ -177,12 +183,23 @@ padding-left: 20px;
 color: var(--mainColor);
 }
 
+.master-link:hover ~ .count{
+color: var(--mainColor);
+}
+.countAll{
+    font-size: 1.2rem;
+    background: var(--mainColor);
+    padding: 0.5rem 0.5rem;
+    border-radius: 10px;
+    font-weight: bold;
+}
 
 .subContainer{
     background-color: var(--silverBink);
     transition: var(--transition);
     height: 0;
    overflow: hidden;
+   counter-reset: section;
 }
 
 
@@ -199,9 +216,8 @@ color: var(--mainColor);
     white-space: nowrap; 
 }
 .sub-link::before{
-    font-family: "Font Awesome 5 Brands"; 
-    content: "\f3B8";
-    margin-right: 0.5rem;
+   counter-increment: section;
+    content: " "counter(section) " - ";
 }
 .sub-link:hover{
     padding-left: 50px;
@@ -250,9 +266,9 @@ color: var(--mainColor);
     position: absolute;
     background: transparent;
     display: none;
-    padding: 1rem 0.25rem;
     border-radius: 20px;
-    border: 1px solid var(--secColot);
+    border: 4px solid black;
+    overflow: hidden;
 }
 
 .tooltips p{
